changed route to return csv content type

--- a/views/upload.haml
+++ b/views/upload.haml
@@ -2,7 +2,7 @@
 
 %p WARNING! You MUST open the .xls file that you export and resave as a .csv file. I did not want to use very many external libraries for this quick "work around" utility. I'll add file support later.
 
-%form{:action => "/upload", :method => :post, :enctype=>"multipart/form-data"}
+%form{:action => "/export.csv", :method => :post, :enctype=>"multipart/form-data"}
 
 	%table.form
 		%tr
