moved app wide links to layouts and added nav and title bar

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,9 +1,6 @@
-%h1 GLSEC NameTag Creation
+%h1 Welcome
 
 %p Simple Web Utility to convert <a href="http://regonline.com/">RegOnline</a> Excel Exports into a custom CSV for GR Makers and GSLEC Committee to create and print nametags for guests.
 
-%ul
-	%li
-		%a{:href => url_for("/settings")} Settings
-	%li
-		%a{:href => url_for("/upload")} Upload File
+%p
+	%a{:href => url_for("/upload")} Upload File
