fixed title and link to bootstrap css files

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,9 +1,9 @@
 !!!
 %html
 	%head
-		%title= "ltrevisan.net | #{@title}"
+		%title GLSEC Name Tag Conversion Utility
 		%meta{ :name => "viewport", :content=>"width=device-width, initial-scale=1.0"}
-		%link{ :href => url_for('/libs/bootstrap/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
+		%link{ :href => url_for('/public/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
 	%body
 		.navbar.navbar-fixed-top
 			.navbar-inner
