--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
 	%head
 		%title GLSEC Name Tag Conversion Utility
 		%meta{ :name => "viewport", :content=>"width=device-width, initial-scale=1.0"}
-		%link{ :href => url_for('/public/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
+		%link{ :href => url_for('/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
 	%body
 		.navbar.navbar-fixed-top
 			.navbar-inner
