--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,10 +5,10 @@
 		%meta{ :name => "viewport", :content=>"width=device-width, initial-scale=1.0"}
 		%link{ :href => url_for('/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
 	%body
-		.navbar.navbar-fixed-top
+		.navbar
 			.navbar-inner
 				.container
-					%a{:href => url_for('/')}.brand GLSEC Name Tag Conversion Tool
+					%a{:href => url_for('/'), :class => "brand"} GLSEC Name Tag Conversion Tool
 					%ul.nav
 						%li
 							%a{:href => url_for('/upload')} Upload File
