--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,13 +5,17 @@
 		%meta{ :name => "viewport", :content=>"width=device-width, initial-scale=1.0"}
 		%link{ :href => url_for('/css/bootstrap.min.css'), :rel => 'stylesheet', :type => 'text/css' }
 	%body
-		.navbar
-			.navbar-inner
-				.container
-					%a{:href => url_for('/'), :class => "brand"} GLSEC Name Tag Conversion Tool
-					%ul.nav
-						%li
-							%a{:href => url_for('/upload')} Upload File
 		.container
+			.navbar
+				.navbar-inner
+					.container
+						%a{:href => url_for('/'), :class => "brand"} GLSEC Name Tag Conversion Tool
+						%ul.nav
+							%li
+								%a{:href => url_for('/upload')} Upload File
+							%li
+								%a{:href => "http://glsec.org/"} GLSEC
+							%li
+								%a{:href => "http://regonline.com/"} RegOnline
 			= yield
 	
