pulled navbar links to the right and reformatted upload form using bootstrap

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,7 +10,7 @@
 				.navbar-inner
 					.container
 						%a{:href => url_for('/'), :class => "brand"} GLSEC Name Tag Conversion Tool
-						%ul.nav
+						%ul.nav.pull-right
 							%li
 								%a{:href => url_for('/upload')} Upload File
 							%li
