--- a/views/upload.haml
+++ b/views/upload.haml
@@ -1,16 +1,19 @@
 %h1 Convert RegOnline .csv file
 
-%p WARNING! You MUST open the .xls file that you export and resave as a .csv file. I did not want to use very many external libraries for this quick "work around" utility. I'll add file support later.
+%p 
+	.span.label.label-warning WARNING!
+	You MUST open the .xls file that you export and resave as a .csv file. I did not want to use very many external libraries for this quick "work around" utility. I'll add file support later.
 
-%form{:action => "/export.csv", :method => :post, :enctype=>"multipart/form-data", :class => "form-horizontal"}
+.well.well-large
+	%form{:action => "/export.csv", :method => :post, :enctype=>"multipart/form-data", :class => "form-horizontal"}
 
-	.control-group
-		.control-label
-			RegOnline Export (converted to .csv)
-		.controls
-			%input{:type => :file, :name => "file"}
-	.control-group
-		.controls
-			%input{:type => :submit, :value => "Convert"}
+		.control-group
+			.control-label
+				RegOnline Export (converted to .csv)
+			.controls
+				%input{:type => :file, :name => "file"}
+		.control-group
+			.controls
+				%input{:type => :submit, :value => "Convert"}
 
-%p Once you hit "Convert," an export.csv file will automatically be downloaded for your use. Nothing will be stored on the server.
+.alert.alert-info Once you hit "Convert," an export.csv file will automatically be downloaded for your use. Nothing will be stored on the server.
