--- a/views/upload.haml
+++ b/views/upload.haml
@@ -1,8 +1,11 @@
 %h1 Convert RegOnline .csv file
 
 %p 
-	.span.label.label-warning WARNING!
+	%span.label.label-warning WARNING!  
 	You MUST open the .xls file that you export and resave as a .csv file. I did not want to use very many external libraries for this quick "work around" utility. I'll add file support later.
+
+
+.alert.alert-info Once you hit "Convert," an export.csv file will automatically be downloaded for your use. Nothing will be stored on the server.
 
 .well.well-large
 	%form{:action => "/export.csv", :method => :post, :enctype=>"multipart/form-data", :class => "form-horizontal"}
@@ -15,5 +18,3 @@
 		.control-group
 			.controls
 				%input{:type => :submit, :value => "Convert"}
-
-.alert.alert-info Once you hit "Convert," an export.csv file will automatically be downloaded for your use. Nothing will be stored on the server.
