made upload link on welcome page into a large button

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,7 +11,7 @@
 					.container
 						%a{:href => url_for('/'), :class => "brand"} GLSEC Name Tag Conversion Tool
 						%ul.nav.pull-right
-							%li
+							%li.active
 								%a{:href => url_for('/upload')} Upload File
 							%li
 								%a{:href => "http://glsec.org/"} GLSEC
