--- a/views/index.haml
+++ b/views/index.haml
@@ -3,4 +3,4 @@
 %p Simple Web Utility to convert <a href="http://regonline.com/">RegOnline</a> Excel Exports into a custom CSV for GR Makers and GSLEC Committee to create and print nametags for guests.
 
 %p
-	%a{:href => url_for("/upload")} Upload File
+	%a{:href => url_for("/upload"), :class => "btn btn-large btn-primary"} Upload File
